--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div>
 			<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">click me</a>
       <a href="file:///Users/Taylor1/Desktop/unicorns!!!.html">unicorn game</a>
-      <a href="file:///Users/Taylor1/Desktop/Saxophone Launch.html">saxophone game</a>
+      <a href="Saxophone Launch.html">saxophone game</a>
       <a href="file:///Users/Taylor1/Desktop/Saxophone.html">saxophone sim</a>
       <a href="file:///Users/Taylor1/Desktop/Trumpet.html">trumpet sim</a>
         </div>
