--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 			<h1>have a meme</h1>
         <div>
 			<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">click me</a>
-      <a href="file:///Users/Taylor1/Desktop/unicorns!!!.html">unicorn game</a>
+      <a href="unicorns!!!.html">unicorn game</a>
       <a href="Saxophone Launch.html">saxophone game</a>
-      <a href="file:///Users/Taylor1/Desktop/Saxophone.html">saxophone sim</a>
-      <a href="file:///Users/Taylor1/Desktop/Trumpet.html">trumpet sim</a>
+      <a href="Saxophone.html">saxophone sim</a>
+      <a href="Trumpet.html">trumpet sim</a>
         </div>
 			<h2>HEEEEEEEYYYAAAAAHHHHEEEEEYYYYAAAA</h2>
 			<p>fite me fite me fite me fite me fite me fite me fite me fite me</p>
