--- a/Saxophone.html
+++ b/Saxophone.html
@@ -8,7 +8,7 @@
 	<body>
 		<h1>Play a Saxophone!!!</h1>
 		<div></div>
-		            <iframe allowtransparency="false" width="785" height="630" src="https://scratch.mit.edu/projects/embed/229197790/?autostart=true" frameborder="0" allowfullscreen></iframe>
+		            <iframe allowtransparency="false" width="785" height="630" src="https://scratch.mit.edu/projects/embed/229197790/?autostart=false" frameborder="0" allowfullscreen></iframe>
     
 
 		<div></div>
