--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="Saxophone Launch.html">saxophone game</a>
       <a href="Saxophone.html">saxophone sim</a>
       <a href="Trumpet.html">trumpet sim</a>
+	<a href="Strataslime.html">strataslime</a>
         </div>
 			<h2>HEEEEEEEYYYAAAAAHHHHEEEEEYYYYAAAA</h2>
 			<p>fite me fite me fite me fite me fite me fite me fite me fite me</p>
