--- a/Strataslime.html
+++ b/Strataslime.html
@@ -14,6 +14,6 @@
     
 
 		<div></div>
-		<a href="file:///Users/Taylor1/Desktop/yeet.html">back to home</a>
+		<a href="https://taylorevielou.github.io/">back to home</a>
 	</body>
 </html>
