--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="yeet.css"/>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+	<link rel="icon" href="http://assets.stickpng.com/thumbs/587e31f49686194a55adab6e.png">
 	</head>
 
 	<body>
