--- a/Saxophone.html
+++ b/Saxophone.html
@@ -4,6 +4,7 @@
 		<title>Saxophone Simulator</title>
 		<link rel="stylesheet" type="text/css" href="Saxophone.css"/>
 		<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+		<link rel="icon" href="http://assets.stickpng.com/thumbs/587e31f49686194a55adab6e.png">
 	</head>
 	<body>
 		<h1>Play a Saxophone!!!</h1>
