--- a/Trumpet.html
+++ b/Trumpet.html
@@ -4,6 +4,7 @@
 		<title>Trumpet Simulator</title>
 		<link rel="stylesheet" type="text/css" href="Trumpet.css"/>
 		<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+		<link rel="icon" href="http://assets.stickpng.com/thumbs/587e31f49686194a55adab6e.png">
 	</head>
 	<body>
 		<h1>Play a Trumpet!!!</h1>
